# royalinera

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  linera.toml
scripts/: deploy.sh  dev-conway.sh  pre-push-check.sh  simulate-buyer.sh  start-service.sh  test-marketplace.sh
src/: contract.rs  lib.rs  service.rs  state.rs
web-client/: index.html  package-lock.json  package.json  server.js  vercel.json  vite.config.js  vite.config.ts
web-client/public/wasm/: linera_web.js
web-client/src/: App.jsx  index.css  main.js  style.css
web-client/src/components/: Layout.jsx  TicketHistory.jsx  TransactionConfirmation.jsx  TransactionHistory.jsx  WalletButton.jsx  WalletModal.jsx  WalletModalNew.jsx
web-client/src/components/ui/: index.jsx
web-client/src/contexts/: LineraContext.jsx  WalletContext.jsx
web-client/src/hooks/: useDebounce.js
web-client/src/pages/: Events.jsx  EventsNew.jsx  Home.jsx  Marketplace.jsx  MarketplaceNew.jsx  Mint.jsx  MintNew.jsx  MyTickets.jsx  MyTicketsNew.jsx
web-client/src/providers/: GraphQLProvider.jsx  LineraProvider.jsx  WalletProvider.jsx
web-frontend-static/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
web-frontend-static/api/: linera-proxy.js
