[package]
name = "ticketing"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []

[dependencies]
async-graphql.workspace = true
base64.workspace = true
bcs.workspace = true
linera-sdk.workspace = true
serde.workspace = true
sha3.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ticketing = { workspace = true, features = ["test"] }
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio.workspace = true

[[bin]]
name = "ticketing_contract"
path = "src/contract.rs"

[[bin]]
name = "ticketing_service"
path = "src/service.rs"
