[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
# Enables better panic messages in wasm (browser-only demos).
console_panic = ["console_error_panic_hook"]

[dependencies]
async-graphql = "7.0.17"
base64 = "0.22.0"
bcs = "0.1.6"
linera-sdk = { path = "linera-protocol/linera-sdk" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
linera-sdk = { path = "linera-protocol/linera-sdk", features = ["test", "wasmer"] }
tokio = { version = "1", features = ["rt", "sync"] }

[[bin]]
name = "ticketing_contract"
path = "src/contract.rs"

[[bin]]
name = "ticketing_service"
path = "src/service.rs"
